fix: show info page on mobile

--- a/src/views/Info/components/InfoTables/styles.module.scss
+++ b/src/views/Info/components/InfoTables/styles.module.scss
@@ -1,7 +1,7 @@
 .clickableColumnHeader {
     cursor: pointer;
 	display: flex;
-	justify-content: start;
+	justify-content: flex-start;
 	gap: 5px;
 }
 
